--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -1,9 +1,5 @@
-# $NetBSD: Makefile,v 1.139 2024/12/27 08:20:01 wiz Exp $
+# $NetBSD: Makefile,v 1.140 2025/02/07 21:54:16 wiz Exp $
 
-# Used by pyversion.mk
-BUILD_USES_CMAKE=	yes
-
-PKGREVISION= 12
 .include "Makefile.common"
 
 DISTNAME=	opencv-${OPENCV_VERSION}
@@ -11,18 +7,8 @@ DISTNAME=	opencv-${OPENCV_VERSION}
 MAINTAINER=	anthony.mallet@laas.fr
 COMMENT=	Library for computer vision problems
 
-INSTALLATION_DIRS+=	share/doc/opencv/papers
-INSTALLATION_DIRS+=	share/doc/opencv/ref/pics
-INSTALLATION_DIRS+=	share/OpenCV/haarcascades
-
-PKGCONFIG_OVERRIDE+=		${CMAKE_BUILD_DIR}/unix-install/opencv.pc
-PKGCONFIG_OVERRIDE_STAGE=	post-build
-
 PY_PATCHPLIST=		yes
 REPLACE_PYTHON+=	samples/python/*.py
-
-# includes configure output and paths to gmake etc.
-CHECK_WRKREF_SKIP=	${PREFIX}/lib/libopencv_core.*
 
 .include "options.mk"
 
@@ -32,15 +18,15 @@ TEST_ENV+=	DYLD_LIBRARY_PATH=${WRKSRC}/${CMAKE_BUILD_DIR}/lib
 TEST_TARGET=	test
 
 post-install:
-	${RM} -r ${DESTDIR}${PREFIX}/share/licenses
+	${MV} ${DESTDIR}${PREFIX}/share/licenses/opencv4 ${DESTDIR}${PREFIX}/share/opencv4/licenses
 
-.include "../../mk/bsd.prefs.mk"
-
-.include "../../devel/cmake/build.mk"
 .include "../../devel/protobuf/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
+.include "../../graphics/libavif/buildlink3.mk"
 .include "../../graphics/libwebp/buildlink3.mk"
 .include "../../graphics/openexr/buildlink3.mk"
+BUILDLINK_API_DEPENDS.openjpeg+=	openjpeg>=2.3.1
+.include "../../graphics/openjpeg/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../graphics/tiff/buildlink3.mk"
 .include "../../lang/python/extension.mk"
