--- a/devel/py-test-datadir/Makefile
+++ b/devel/py-test-datadir/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2023/10/18 15:41:29 adam Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/07 21:55:22 adam Exp $
 
-DISTNAME=	pytest-datadir-1.5.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
+DISTNAME=	pytest_datadir-1.6.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pytest_/test-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-datadir/}
 
@@ -10,12 +10,11 @@ HOMEPAGE=	https://github.com/gabrielcnr/pytest-datadir
 COMMENT=	Pytest plugin for test data directories and files
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=4.1.2:../../devel/py-setuptools_scm
-TEST_DEPENDS+=	${PYPKGPREFIX}-test>=5.3.10:../../devel/py-test
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
+TEST_DEPENDS+=	${PYPKGPREFIX}-test>=7.0:../../devel/py-test
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
