--- a/graphics/py-Willow/Makefile
+++ b/graphics/py-Willow/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.32 2024/12/26 23:57:21 adam Exp $
+# $NetBSD: Makefile,v 1.33 2025/02/07 21:58:00 wiz Exp $
 
 DISTNAME=	willow-1.9.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^w/W/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	graphics python
 MASTER_SITES=	${MASTER_SITE_PYPI:=W/Willow/}
 
