--- a/net/py-moto/Makefile
+++ b/net/py-moto/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:28:49 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/07 22:07:53 adam Exp $
 
-DISTNAME=	moto-4.1.14
+DISTNAME=	moto-5.0.28
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	net devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/moto/}
@@ -12,19 +12,21 @@ LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=40.6.0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-boto3>=1.9.201:../../net/py-boto3
-DEPENDS+=	${PYPKGPREFIX}-botocore>=1.12.201:../../net/py-botocore
+DEPENDS+=	${PYPKGPREFIX}-botocore>=1.35.47:../../net/py-botocore
 DEPENDS+=	${PYPKGPREFIX}-dateutil>=2.1:../../time/py-dateutil
 DEPENDS+=	${PYPKGPREFIX}-jinja2>=2.10.1:../../textproc/py-jinja2
 DEPENDS+=	${PYPKGPREFIX}-pytz-[0-9]*:../../time/py-pytz
 DEPENDS+=	${PYPKGPREFIX}-requests>=2.5:../../devel/py-requests
-DEPENDS+=	${PYPKGPREFIX}-responses>=0.13.0:../../net/py-responses
+DEPENDS+=	${PYPKGPREFIX}-responses>=0.25.6:../../net/py-responses
 DEPENDS+=	${PYPKGPREFIX}-werkzeug>=2.2.2:../../www/py-werkzeug
 DEPENDS+=	${PYPKGPREFIX}-xmltodict-[0-9]*:../../textproc/py-xmltodict
+# proxy
+DEPENDS+=	${PYPKGPREFIX}-multipart-[0-9]*:../../www/py-multipart
+# server
+DEPENDS+=	${PYPKGPREFIX}-flask>=2.2.2:../../www/py-flask
+DEPENDS+=	${PYPKGPREFIX}-flask-cors-[0-9]*:../../www/py-flask-cors
+DEPENDS+=	${PYPKGPREFIX}-pyaml>=5.1:../../textproc/py-pyaml
 # unlisted but used
-DEPENDS+=	${PYPKGPREFIX}-flask-[0-9]*:../../www/py-flask
-DEPENDS+=	${PYPKGPREFIX}-pyaml-[0-9]*:../../textproc/py-pyaml
-# unlisted but used
-TEST_DEPENDS+=	${PYPKGPREFIX}-flask-cors-[0-9]*:../../www/py-flask-cors
 TEST_DEPENDS+=	${PYPKGPREFIX}-freezegun-[0-9]*:../../devel/py-freezegun
 TEST_DEPENDS+=	${PYPKGPREFIX}-openapi-spec-validator>=0.2.8:../../textproc/py-openapi-spec-validator
 TEST_DEPENDS+=	${PYPKGPREFIX}-sure>=1.2.24:../../devel/py-sure
@@ -33,13 +35,13 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-sure>=1.2.24:../../devel/py-sure
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
 post-install:
+.for bin in moto_proxy moto_server
 	cd ${DESTDIR}${PREFIX}/bin && \
-	${MV} moto_server moto_server-${PYVERSSUFFIX} || ${TRUE}
+	${MV} ${bin} ${bin}-${PYVERSSUFFIX} || ${TRUE}
+.endfor
 
-.include "../../lang/python/wheel.mk"
 PYTHON_VERSIONED_DEPENDENCIES+=	cryptography
 .include "../../lang/python/versioned_dependencies.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
