--- a/x11/py-qt6/Makefile
+++ b/x11/py-qt6/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2025/02/07 13:25:09 adam Exp $
+# $NetBSD: Makefile,v 1.23 2025/02/07 22:12:56 wiz Exp $
 
 DISTNAME=	pyqt6-6.8.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
 CATEGORIES=	x11 python
 MASTER_SITES=	${MASTER_SITE_PYPI:=P/PyQt6/}
 
