opencv: fix build on Darwin/aarch64; force auto detection = avoid building 3rdparty packages; switch ffmpeg to v6

--- a/graphics/opencv/Makefile.common
+++ b/graphics/opencv/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.23 2025/02/07 21:56:05 wiz Exp $
+# $NetBSD: Makefile.common,v 1.24 2025/02/07 23:35:30 adam Exp $
 #
 # used by graphics/opencv/Makefile
 # used by graphics/opencv-contrib-face/Makefile
@@ -11,25 +11,34 @@ MASTER_SITES=	${MASTER_SITE_GITHUB:=opencv/}
 HOMEPAGE=	https://opencv.org/
 LICENSE=	apache-2.0
 
-USE_LANGUAGES=		c c++
+USE_CC_FEATURES=	c99
 USE_CXX_FEATURES=	c++17
+USE_LANGUAGES=		c c++
 USE_TOOLS+=		gmake pkg-config
 
 CHECK_PORTABILITY_SKIP+=	platforms/ios/cmake/Toolchains/xcodebuild_wrapper.in
 CHECK_PORTABILITY_SKIP+=	cmake/templates/xcode-*
 
-CMAKE_CONFIGURE_ARGS+=		-DBUILD_JAVA=OFF
-CMAKE_CONFIGURE_ARGS+=		-DBUILD_PROTOBUF=OFF
-CMAKE_CONFIGURE_ARGS+=		-DCV_ENABLE_INTRINSICS=OFF # XXX: problematic
-CMAKE_CONFIGURE_ARGS+=		-DENABLE_CCACHE=OFF
-CMAKE_CONFIGURE_ARGS+=		-DOPENCV_GENERATE_SETUPVARS=OFF
-CMAKE_CONFIGURE_ARGS+=		-DPROTOBUF_UPDATE_FILES=ON
-CMAKE_CONFIGURE_ARGS+=		-DWITH_EIGEN=OFF
-CMAKE_CONFIGURE_ARGS+=		-DZLIB_ROOT=${BUILDLINK_PREFIX.zlib}
+# Turn off BUILD options to make auto detection work correctly.
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_JAVA=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_JPEG=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_OPENEXR=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_OPENJPEG=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_PNG=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_PROTOBUF=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_TIFF=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_WEBP=OFF
+CMAKE_CONFIGURE_ARGS+=	-DBUILD_ZLIB=OFF
+CMAKE_CONFIGURE_ARGS+=	-DCV_ENABLE_INTRINSICS=OFF # XXX: problematic
+CMAKE_CONFIGURE_ARGS+=	-DENABLE_CCACHE=OFF
+CMAKE_CONFIGURE_ARGS+=	-DOPENCV_GENERATE_SETUPVARS=OFF
+CMAKE_CONFIGURE_ARGS+=	-DPROTOBUF_UPDATE_FILES=ON
+CMAKE_CONFIGURE_ARGS+=	-DWITH_EIGEN=OFF
+CMAKE_CONFIGURE_ARGS+=	-DZLIB_ROOT=${BUILDLINK_PREFIX.zlib}
 # needed by protobuf
-CMAKE_CONFIGURE_ARGS+=		-DCMAKE_CXX_STANDARD=17
+CMAKE_CONFIGURE_ARGS+=	-DCMAKE_CXX_STANDARD=17
 # doesn't build on NetBSD with libva-2.22.0
-CMAKE_CONFIGURE_ARGS+=		-DWITH_VA=OFF
+CMAKE_CONFIGURE_ARGS+=	-DWITH_VA=OFF
 #.include "../../multimedia/libva/buildlink3.mk"
 
 # lapack: disabled because it makes the build fail with
@@ -58,9 +67,14 @@ BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--gc-sections
 
 .include "../../mk/bsd.prefs.mk"
 
+# error: unknown type name 'float16x8_t'
+.if ${OPSYS} == "Darwin" && ${MACHINE_ARCH} == "aarch64"
+CMAKE_CONFIGURE_ARGS+=	-DENABLE_NEON=OFF
+.endif
+
 .if ${MACHINE_ARCH} == "i386"
 # Disable SSE/SSE2 to avoid build errors from missing _mm_pause.
-CMAKE_CONFIGURE_ARGS+=		-DCPU_BASELINE=""
+CMAKE_CONFIGURE_ARGS+=	-DCPU_BASELINE=""
 .endif
 
 .include "../../mk/atomic64.mk"
