--- a/lang/php56/Makefile
+++ b/lang/php56/Makefile
@@ -1,13 +1,11 @@
-# $NetBSD: Makefile,v 1.39 2024/12/01 16:11:56 taca Exp $
+# $NetBSD: Makefile,v 1.40 2025/02/08 02:57:59 taca Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
 #
-PKGNAME=		php-${PHP_VERSION}
-PKGREVISION=		16
+PKGNAME=		${PHP_PKG_PREFIX}-${PHP_VERSION}
 CATEGORIES=		lang
 
-HOMEPAGE=		https://www.php.net/
 COMMENT=		PHP Hypertext Preprocessor version 5.6
 LICENSE=		php
 
@@ -15,33 +13,29 @@ TEST_TARGET=		test
 
 USE_TOOLS+=		autoconf269 gmake lex pkg-config
 LIBTOOL_OVERRIDE=	# empty
-PHP_CHECK_INSTALLED=	No
 
-PHP_VERSIONS_ACCEPTED=		56
+PHP_VERSIONS_ACCEPTED=	56
+
+CONFLICTS+=		php-[0-9]*
+SUPERSEDES+=		php-[0-9]*
 
 .include "Makefile.php"
 
 CGIDIR=			${PREFIX}/libexec/cgi-bin
-EGDIR=			${PREFIX}/share/examples/php
-MESSAGE_SUBST+=		CGIDIR=${CGIDIR}
+MESSAGE_SUBST+=		CGIDIR=${CGIDIR} PHP_VER=${PHP_VER}
 
 CONFIGURE_ARGS+=	--enable-cgi
 CONFIGURE_ENV+=		lt_cv_path_SED=${SED:Q}
 MAKE_ENV+=		INSTALL_ROOT=${DESTDIR}
 
-CONF_FILES=		${EGDIR}/php.ini-production ${PKG_SYSCONFDIR}/php.ini
+CONF_FILES=		${PHP_EGDIR}/php.ini-production \
+			${PKG_SYSCONFDIR}/php.ini
 PLIST_SUBST+=		PHPEXTDIR="${PHP_EXTENSION_DIR}"
 
-SUBST_CLASSES+=		path
-SUBST_MESSAGE.path=	Fixing common paths.
-SUBST_STAGE.path=	pre-configure
-SUBST_FILES.path=	ext/phar/phar/phar.php
-SUBST_FILES.path+=	php.ini-development php.ini-production run-tests.php
-SUBST_FILES.path+=	sapi/cgi/Makefile.frag
-SUBST_VARS.path=	CGIDIR
-SUBST_VARS.path+=	PREFIX
+REPLACE_PHP+=		ext/phar/phar/phar.php run-tests.php
 
-INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${EGDIR} share/php
+INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${PHP_EGDIR} \
+			${PHP_SHAREDIR}
 
 # Darwin < 9 (Mac OS X < 10.5 "Leopard") doesn't have gethostuuid(2)
 # and lacks the zone memory allocator
@@ -53,12 +47,9 @@ pre-configure:
 	cd ${WRKSRC} && ${PKGSRC_SETENV} ${CONFIGURE_ENV} autoconf -f
 
 post-install:
-#	${INSTALL_PROGRAM} ${WRKSRC}/sapi/cli/php ${DESTDIR}${PREFIX}/bin/php
-#	${INSTALL_DATA} ${WRKSRC}/sapi/cli/php.1 \
-#		${DESTDIR}${PREFIX}/${PKGMANDIR}/man1/php.1
-#	${INSTALL_PROGRAM} ${WRKSRC}/sapi/cgi/php-cgi ${DESTDIR}${CGIDIR}/php
 	cd ${WRKSRC}; ${INSTALL_DATA} php.ini-development php.ini-production \
-		${DESTDIR}${EGDIR}
-	${INSTALL_DATA} ${WRKSRC}/php.gif ${DESTDIR}${PREFIX}/share/php
+		${DESTDIR}${PREFIX}/${PHP_EGDIR}
+	${INSTALL_DATA} ${WRKSRC}/php.gif \
+		${DESTDIR}${PREFIX}/${PHP_SHAREDIR}
 
 .include "../../mk/bsd.pkg.mk"
