--- a/lang/php56/patches/patch-sapi_fpm_php-fpm.conf.in
+++ b/lang/php56/patches/patch-sapi_fpm_php-fpm.conf.in
@@ -1,16 +1,32 @@
-$NetBSD: patch-sapi_fpm_php-fpm.conf.in,v 1.1 2014/11/24 15:37:08 taca Exp $
+$NetBSD: patch-sapi_fpm_php-fpm.conf.in,v 1.2 2025/02/08 02:57:59 taca Exp $
 
-Uncomment the pid parameter so the pidfile is created and rc.d script
-can really start / stop php-fpm
+Set proper default configuration values.
 
---- sapi/fpm/php-fpm.conf.in.orig	2014-11-12 13:52:21.000000000 +0000
+--- sapi/fpm/php-fpm.conf.in.orig	2019-01-09 09:54:13.000000000 +0000
 +++ sapi/fpm/php-fpm.conf.in
-@@ -22,7 +22,7 @@
+@@ -22,14 +22,14 @@
  ; Pid file
  ; Note: the default prefix is @EXPANDED_LOCALSTATEDIR@
  ; Default Value: none
 -;pid = run/php-fpm.pid
-+pid = run/php-fpm.pid
++pid = run/php-fpm@PHP_VER@.pid
  
  ; Error log file
  ; If it's set to "syslog", log is sent to syslogd instead of being written
+ ; in a local file.
+ ; Note: the default prefix is @EXPANDED_LOCALSTATEDIR@
+ ; Default Value: log/php-fpm.log
+-;error_log = log/php-fpm.log
++;error_log = log/php-fpm@PHP_VER@.log
+ 
+ ; syslog_facility is used to specify what type of program is logging the
+ ; message. This lets syslogd specify that messages from different facilities
+@@ -161,7 +161,7 @@ group = @php_fpm_group@
+ ;                            (IPv6 and IPv4-mapped) on a specific port;
+ ;   '/path/to/unix/socket' - to listen on a unix socket.
+ ; Note: This value is mandatory.
+-listen = 127.0.0.1:9000
++listen = @php_fpm_localstatedir@/run/php-fpm@PHP_VER@
+ 
+ ; Set listen(2) backlog.
+ ; Default Value: 65535 (-1 on FreeBSD and OpenBSD)
