--- a/lang/php74/Makefile
+++ b/lang/php74/Makefile
@@ -1,32 +1,33 @@
-# $NetBSD: Makefile,v 1.26 2024/12/01 16:13:14 taca Exp $
+# $NetBSD: Makefile,v 1.27 2025/02/08 02:58:55 taca Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
 #
-PKGNAME=		php-${PHP_VERSION:S/RC/rc/}
-PKGREVISION=		9
+PKGNAME=		${PHP_PKG_PREFIX}-${PHP_VERSION}
+CATEGORIES=		lang
 
 COMMENT=		PHP Hypertext Preprocessor version 7.4
 LICENSE=		php
 
 TEST_TARGET=		test
 
-USE_TOOLS+=		autoconf gmake lex
+USE_TOOLS+=		autoconf269 gmake lex
 LIBTOOL_OVERRIDE=	# empty
-PHP_CHECK_INSTALLED=	No
 
-PHP_VERSIONS_ACCEPTED=		74
+PHP_VERSIONS_ACCEPTED=	74
+
+CONFLICTS+=		php-[0-9]*
+SUPERSEDES+=		php-[0-9]*
 
 .include "Makefile.php"
 
 CGIDIR=			${PREFIX}/libexec/cgi-bin
-EGDIR=			${PREFIX}/share/examples/php
-MESSAGE_SUBST+=		CGIDIR=${CGIDIR}
+MESSAGE_SUBST+=		CGIDIR=${CGIDIR} PHP_VER=${PHP_VER}
 
 CONFIGURE_ENV+=		lt_cv_path_SED=${SED:Q}
 MAKE_ENV+=		INSTALL_ROOT=${DESTDIR}
 
-CONF_FILES=		${EGDIR}/php.ini-production ${PKG_SYSCONFDIR}/php.ini
+CONF_FILES=		${PHP_EGDIR}/php.ini-production ${PKG_SYSCONFDIR}/php.ini
 PLIST_SUBST+=		PHPEXTDIR="${PHP_EXTENSION_DIR}"
 
 # taken from devel/pkgconf/Makefile
@@ -43,16 +44,8 @@ PHP_PKGCONFIG_PATH=	${PKGCONFIG_PATHS:ts:}
 
 REPLACE_PHP=		ext/phar/phar/phar.php run-tests.php
 
-SUBST_CLASSES+=		path
-SUBST_MESSAGE.path=	Fixing common paths.
-SUBST_STAGE.path=	pre-configure
-SUBST_FILES.path+=	php.ini-development php.ini-production
-SUBST_FILES.path+=	sapi/cgi/Makefile.frag
-SUBST_VARS.path=	CGIDIR
-SUBST_VARS.path+=	PREFIX
-SUBST_VARS.path+=	TOOLS_PATH.pkg-config PHP_PKGCONFIG_PATH
-
-INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${EGDIR} share/php
+INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${PHP_EGDIR} \
+			${PHP_SHAREDIR}
 
 # Make sure modules can link correctly
 .if ${OPSYS} == "Darwin"
@@ -70,7 +63,7 @@ pre-configure:
 
 post-install:
 	cd ${WRKSRC}; ${INSTALL_DATA} php.ini-development php.ini-production \
-		${DESTDIR}${EGDIR}
+		${DESTDIR}${PREFIX}/${PHP_EGDIR}
 
-.include "../../lang/php/replace.mk"
+.include "../../lang/php/phpversion.mk"
 .include "../../mk/bsd.pkg.mk"
