--- a/lang/php74/Makefile.common
+++ b/lang/php74/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2023/05/06 14:02:13 taca Exp $
+# $NetBSD: Makefile.common,v 1.3 2025/02/08 02:58:55 taca Exp $
 # used by lang/php74/Makefile.php
 # used by lang/php/ext.mk
 
@@ -11,7 +11,7 @@ MAINTAINER?=		pkgsrc-users@NetBSD.org
 
 USE_TOOLS+=		pkg-config
 
-# needed due to (broken?) configure checks in php-xmlrpc and php5-dom
+# needed due to (broken?) configure checks in php-xmlrpc
 CONFIGURE_ENV+=		PHP_LIBXML_SHARED="1"
 
 .if ${OPSYS} == "NetBSD"
