--- a/lang/php83/Makefile
+++ b/lang/php83/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.10 2024/11/25 14:36:20 taca Exp $
+# $NetBSD: Makefile,v 1.11 2025/02/08 02:59:57 taca Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
 #
-PKGNAME=		php-${PHP_VERSION:S/RC/rc/}
+PKGNAME=		${PHP_PKG_PREFIX}-${PHP_VERSION}
+CATEGORIES=		lang
 
 COMMENT=		PHP Hypertext Preprocessor version 8.3
 LICENSE=		php
@@ -12,20 +13,21 @@ TEST_TARGET=		test
 
 USE_TOOLS+=		autoconf gmake lex
 LIBTOOL_OVERRIDE=	# empty
-PHP_CHECK_INSTALLED=	No
 
-PHP_VERSIONS_ACCEPTED=		83
+PHP_VERSIONS_ACCEPTED=	83
+
+CONFLICTS+=		php-[0-9]*
+SUPERSEDES+=		php-[0-9]*
 
 .include "Makefile.php"
 
 CGIDIR=			${PREFIX}/libexec/cgi-bin
-EGDIR=			${PREFIX}/share/examples/php
-MESSAGE_SUBST+=		CGIDIR=${CGIDIR}
+MESSAGE_SUBST+=		CGIDIR=${CGIDIR} PHP_VER=${PHP_VER}
 
 CONFIGURE_ENV+=		lt_cv_path_SED=${SED:Q}
 MAKE_ENV+=		INSTALL_ROOT=${DESTDIR}
 
-CONF_FILES=		${EGDIR}/php.ini-production ${PKG_SYSCONFDIR}/php.ini
+CONF_FILES=		${PHP_EGDIR}/php.ini-production ${PKG_SYSCONFDIR}/php.ini
 PLIST_SUBST+=		PHPEXTDIR="${PHP_EXTENSION_DIR}"
 
 # taken from devel/pkgconf/Makefile
@@ -42,7 +44,8 @@ PHP_PKGCONFIG_PATH=	${PKGCONFIG_PATHS:ts:}
 
 REPLACE_PHP=		ext/phar/phar/phar.php run-tests.php
 
-INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${EGDIR} share/php
+INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${PHP_EGDIR} \
+			${PHP_SHAREDIR}
 
 # Make sure modules can link correctly
 .if ${OPSYS} == "Darwin"
@@ -60,7 +63,7 @@ pre-configure:
 
 post-install:
 	cd ${WRKSRC}; ${INSTALL_DATA} php.ini-development php.ini-production \
-		${DESTDIR}${EGDIR}
+		${DESTDIR}${PREFIX}/${PHP_EGDIR}
 
-.include "../../lang/php/replace.mk"
+.include "../../lang/php/phpversion.mk"
 .include "../../mk/bsd.pkg.mk"
