--- a/databases/php-dbx/Makefile
+++ b/databases/php-dbx/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2016/09/11 17:03:25 taca Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/08 03:10:21 taca Exp $
 
 MODNAME=		dbx
+PKGREVISION=		1
 PECL_VERSION=		1.1.2
 PECL_LEGACY_VERSION_SCHEME=	yes
 CATEGORIES+=		databases
