--- a/databases/php-mysql/Makefile
+++ b/databases/php-mysql/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2021/06/23 20:33:08 nia Exp $
+# $NetBSD: Makefile,v 1.26 2025/02/08 03:10:21 taca Exp $
 
-PKGREVISION=		1
 MODNAME=		mysql
+PKGREVISION=		2
 CATEGORIES+=		databases
 COMMENT=		PHP extension for MySQL databases
 
