--- a/databases/php-mysqli/Makefile
+++ b/databases/php-mysqli/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2021/07/02 15:19:30 nia Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/08 03:10:22 taca Exp $
 
-PKGREVISION=		2
 MODNAME=		mysqli
+PKGREVISION=		3
 CATEGORIES+=		databases
 COMMENT=		PHP5 extension for MySQL 4.1 and later databases
 
