--- a/databases/php-pdo/Makefile
+++ b/databases/php-pdo/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2017/12/09 02:25:35 taca Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/08 03:10:22 taca Exp $
 
 MODNAME=		pdo
+PKGREVISION=		1
 CATEGORIES+=		databases
 COMMENT=		PHP extension for PHP Data Objects (base)
 
@@ -12,7 +13,7 @@ USE_PHP_EXT_PATCHES=	yes
 
 CONFIGURE_ARGS+=	--with-${MODNAME}
 
-INSTALLATION_DIRS+=	include/php/ext/pdo
+INSTALLATION_DIRS+=	${PHP_INCDIR}/ext/pdo
 
 PDO_INCLUDES=		php_pdo_driver.h php_pdo.h php_pdo_error.h
 PLIST_VARS+=		pdo_error
@@ -20,7 +21,7 @@ PLIST_SRC+=		${.CURDIR}/../../databases/php-pdo/PLIST.pdo
 
 post-install:
 .for inc in ${PDO_INCLUDES}
-	${INSTALL_DATA} ${WRKSRC}/${inc} ${DESTDIR}${PREFIX}/include/php/ext/pdo/${inc}
+	${INSTALL_DATA} ${WRKSRC}/${inc} ${DESTDIR}${PREFIX}/${PHP_INCDIR}/ext/pdo/${inc}
 .endfor
 
 .include "../../mk/bsd.pkg.mk"
