--- a/databases/php-pdo_mysql/Makefile
+++ b/databases/php-pdo_mysql/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2021/07/02 15:21:35 nia Exp $
+# $NetBSD: Makefile,v 1.23 2025/02/08 03:10:22 taca Exp $
 
-PKGREVISION=		2
 MODNAME=		pdo_mysql
+PKGREVISION=		3
 CATEGORIES+=		databases
 COMMENT=		PHP extension for PHP Data Objects (MySQL)
 
