--- a/databases/php-pdo_pgsql/Makefile
+++ b/databases/php-pdo_pgsql/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2016/11/12 15:42:51 taca Exp $
+# $NetBSD: Makefile,v 1.20 2025/02/08 03:10:22 taca Exp $
 
 MODNAME=		pdo_pgsql
+PKGREVISION=		1
 CATEGORIES+=		databases
 COMMENT=		PHP extension for PHP Data Objects (PostgreSQL)
 
