--- a/databases/php-pdo_sqlite/Makefile
+++ b/databases/php-pdo_sqlite/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.48 2024/11/14 22:19:04 wiz Exp $
+# $NetBSD: Makefile,v 1.49 2025/02/08 03:10:22 taca Exp $
 
 MODNAME=		pdo_sqlite
 CATEGORIES+=		databases
 COMMENT=		PHP extension for PHP Data Objects (SQLite v3)
-PKGREVISION=		15
+PKGREVISION=		16
 
 USE_PHP_EXT_PATCHES=	yes
 
