--- a/devel/php-pcntl/Makefile
+++ b/devel/php-pcntl/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2012/10/31 11:19:24 asau Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/08 03:15:21 taca Exp $
 
 MODNAME=		pcntl
+PKGREVISION=		1
 CATEGORIES+=		devel
 COMMENT=		PHP extension for Process Control functions
 
