--- a/devel/php-sysvshm/Makefile
+++ b/devel/php-sysvshm/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2012/10/31 11:19:24 asau Exp $
+# $NetBSD: Makefile,v 1.11 2025/02/08 03:15:21 taca Exp $
 
 MODNAME=		sysvshm
+PKGREVISION=		1
 CATEGORIES+=		devel
 COMMENT=		PHP extension for SysV shared memory support
 
