--- a/meta-pkgs/php56-extensions/Makefile
+++ b/meta-pkgs/php56-extensions/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2024/04/28 10:06:35 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/08 03:23:43 taca Exp $
 
 DISTNAME=	${PHP_PKG_PREFIX}-extensions-${PHP_VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	meta-pkgs www
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -10,7 +10,7 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://www.php.net/
 COMMENT=	"meta-package" for the PHP 5.6 HTML-embedded scripting language
 
-DEPENDS+=	php>=${PHP_VERSION}<${NEXT_VERS}:${PHPPKGSRCDIR}
+DEPENDS+=	php${PHP_VER}>=${PHP_VERSION}<${NEXT_VERS}:${PHPPKGSRCDIR}
 DEPENDS+=	${APACHE_PKG_PREFIX}-${PHP_PKG_PREFIX}>=${PHP_VERSION}<${NEXT_VERS}:../../www/ap-php
 DEPENDS+=	${PHP_PKG_PREFIX}-fpm>=${PHP_VERSION}<${NEXT_VERS}:../../www/php-fpm
 
