--- a/net/php-snmp/Makefile
+++ b/net/php-snmp/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.15 2023/10/24 22:10:30 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/08 03:18:21 taca Exp $
 
 MODNAME=		snmp
+PKGREVISION=		3
 CATEGORIES+=		net
 COMMENT=		PHP extension for SNMP
-PKGREVISION=		2
 
 CONFLICTS=	php-snmp-[0-9]*
 
