--- a/textproc/php-json/Makefile
+++ b/textproc/php-json/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.12 2024/01/17 15:05:44 gdt Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/08 03:20:14 taca Exp $
 
 # NB: Do not depend on this package directly.  Instead, use
 #   .include "../../lang/php/json.mk"
 # so that it is included only when needed.
 
 MODNAME=		json
+PKGREVISION=		1
 CATEGORIES+=		textproc
 COMMENT=		PHP extension for JSON serialization support
 
@@ -19,7 +20,7 @@ PHP_VERSIONS_ACCEPTED=	56 74
 
 .include "../../lang/php/ext.mk"
 
-INSTALLATION_DIRS+=	include/php/ext/json
+INSTALLATION_DIRS+=	${PHP_INCDIR}/ext/json
 JSON_INCLUDES=		php_json.h
 PLIST_SRC+=		${.CURDIR}/../../textproc/php-json/PLIST
 
@@ -27,6 +28,6 @@ MAKE_ENV+=		RE2C=re2c
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/${JSON_INCLUDES} \
-	    ${DESTDIR}${PREFIX}/include/php/ext/json/${JSON_INCLUDES}
+	    ${DESTDIR}${PREFIX}/${PHP_INCDIR}/ext/json/${JSON_INCLUDES}
 
 .include "../../mk/bsd.pkg.mk"
