--- a/www/php-tidy/Makefile
+++ b/www/php-tidy/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2017/10/27 08:49:01 taca Exp $
+# $NetBSD: Makefile,v 1.5 2025/02/08 03:22:19 taca Exp $
 
 MODNAME=		tidy
+PKGREVISION=		1
 CATEGORIES+=		www
 COMMENT=		PHP extension for tidy functions
 LICENSE=		php
