multiple PHP support
* Use PHP_BASE_VERS in DEPENDS if required.
* Use REPLACE_PHP.

Bump PKGREVISION.

--- a/devel/arcanist/Makefile
+++ b/devel/arcanist/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2024/02/19 15:43:34 taca Exp $
+# $NetBSD: Makefile,v 1.21 2025/02/08 03:36:56 taca Exp $
 
 DISTNAME=		arcanist-20170609
-PKGREVISION=		7
+PKGREVISION=		8
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GITHUB:=phacility/}
 # Track the stable branch
@@ -16,19 +16,15 @@ LICENSE=		apache-2.0
 EXTRACT_USING=		bsdtar
 USE_TOOLS+=		bsdtar pax
 
-DEPENDS+=		${PHP_PKG_PREFIX}-curl-[0-9]*:../../www/php-curl
+DEPENDS+=		${PHP_PKG_PREFIX}-curl>=${PHP_BASE_VERS}:../../www/php-curl
 DEPENDS+=		libphutil-[0-9]*:../../devel/libphutil
 
 CONFLICTS+=		arc-[0-9]*
 
-SUBST_CLASSES+=		php
-SUBST_MESSAGE.php=	Fixing PHP path
-SUBST_STAGE.php=	post-configure
-SUBST_FILES.php=	scripts/arcanist.php
-SUBST_FILES.php+=	scripts/hgdaemon/hgdaemon_client.php
-SUBST_FILES.php+=	scripts/hgdaemon/hgdaemon_server.php
-SUBST_FILES.php+=	src/lint/linter/xhpast/rules/__tests__/inline-html/inline-html.lint-test
-SUBST_SED.php=		-e 's,/usr/bin/env php,${PREFIX}/bin/php,'
+REPLACE_PHP=	scripts/arcanist.php
+REPLACE_PHP+=	scripts/hgdaemon/hgdaemon_client.php
+REPLACE_PHP+=	scripts/hgdaemon/hgdaemon_server.php
+REPLACE_PHP+=	src/lint/linter/xhpast/rules/__tests__/inline-html/inline-html.lint-test
 
 REPLACE_PYTHON+=	scripts/breakout.py
 
