--- a/devel/pear-Console_CommandLine/Makefile
+++ b/devel/pear-Console_CommandLine/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2016/08/21 08:23:06 taca Exp $
+# $NetBSD: Makefile,v 1.2 2025/02/08 03:36:57 taca Exp $
 
 DISTNAME=	Console_CommandLine-1.2.2
+PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
