--- a/net/cacti/files/httpd-cacti.conf
+++ b/net/cacti/files/httpd-cacti.conf
@@ -1,7 +1,4 @@
-# load the php module if it is not already loaded
-<IfModule !php@PKG_PHP_MAJOR_VERS@_module>
-  LoadModule php@PKG_PHP_MAJOR_VERS@_module lib/httpd/mod_php@PKG_PHP_MAJOR_VERS@.so
-</IfModule>
+# $NetBSD: httpd-cacti.conf,v 1.3 2025/02/08 03:49:21 taca Exp $
 
 Alias /cacti "@CACTIDIR@"
 
