--- a/net/icinga-base/Makefile
+++ b/net/icinga-base/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.38 2024/11/16 12:06:07 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2025/02/08 03:49:21 taca Exp $
 #
 
 DISTNAME=	icinga-1.9.4
 PKGNAME=	${DISTNAME:S/-/-base-/}
-PKGREVISION=	29
+PKGREVISION=	30
 CATEGORIES=	net sysutils
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=icinga/}
 
