--- a/net/pear-Net_DIME/Makefile
+++ b/net/pear-Net_DIME/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2012/10/23 17:18:56 asau Exp $
+# $NetBSD: Makefile,v 1.12 2025/02/08 03:49:22 taca Exp $
 
 DISTNAME=	Net_DIME-1.0.2
+PKGREVISION=	1
 CATEGORIES+=	net
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
