--- a/net/pear-Net_LDAP3/Makefile
+++ b/net/pear-Net_LDAP3/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2019/11/03 11:45:48 rillig Exp $
+# $NetBSD: Makefile,v 1.6 2025/02/08 03:49:22 taca Exp $
 
 DISTNAME=	Net_LDAP3-1.0.5
+PKGREVISION=	1
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 CATEGORIES+=	net
 
@@ -9,7 +10,7 @@ COMMENT=	Object oriented interface for searching and manipulating LDAP-entries
 HOMEPAGE=	https://git.kolab.org/project/profile/27/
 LICENSE=	gnu-lgpl-v3
 
-DEPENDS+=	${PHP_PKG_PREFIX}-ldap>=5.2.12:../../databases/php-ldap
+DEPENDS+=	${PHP_PKG_PREFIX}-ldap>=${PHP_BASE_VERS}:../../databases/php-ldap
 
 PEAR_PACKAGE_XML=	no
 
