--- a/net/pear-Net_Sieve/Makefile
+++ b/net/pear-Net_Sieve/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2024/04/09 16:34:46 taca Exp $
+# $NetBSD: Makefile,v 1.22 2025/02/08 03:49:22 taca Exp $
 
 DISTNAME=	Net_Sieve-1.4.7
+PKGREVISION=	1
 CATEGORIES+=	net
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
