--- a/net/pear-SOAP/Makefile
+++ b/net/pear-SOAP/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2012/10/23 17:18:57 asau Exp $
+# $NetBSD: Makefile,v 1.15 2025/02/08 03:49:23 taca Exp $
 
 DISTNAME=	SOAP-0.13.0
+PKGREVISION=	1
 CATEGORIES+=	net
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
