--- a/net/php-yaz/Makefile
+++ b/net/php-yaz/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.59 2024/11/14 22:21:15 wiz Exp $
+# $NetBSD: Makefile,v 1.60 2025/02/08 03:49:23 taca Exp $
 
 MODNAME=		yaz
 PECL_VERSION=		1.2.3
+PKGREVISION=		12
 PECL_LEGACY_VERSION_SCHEME=	yes
 CATEGORIES+=		net
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 COMMENT=		PHP extension for YAZ
-PKGREVISION=		11
 LICENSE=		modified-bsd
 
 PHP_VERSIONS_ACCEPTED=	56 74
