multiple PHP support
* Use PHP_BASE_VERS in DEPENDS if required.
* Use REPLACE_PHP.

Bump PKGREVISION.

--- a/textproc/php-xapian/Makefile
+++ b/textproc/php-xapian/Makefile
@@ -1,15 +1,16 @@
-# $NetBSD: Makefile,v 1.6 2023/02/04 14:28:19 schmonz Exp $
+# $NetBSD: Makefile,v 1.7 2025/02/08 03:55:19 taca Exp $
 
 PKGNAME=		${PHP_PKG_PREFIX}-${PKGNAME_MODULE}
+PKGREVISION=		1
 COMMENT=		PHP bindings for Xapian search engine
 HOMEPAGE=		https://xapian.org/docs/bindings/php/
 
 PHP_VERSIONS_INCOMPATIBLE=	56 74
 
-.include "../../lang/php/phpversion.mk"
-
 CONFIGURE_ARGS+=	--with-php
+CONFIGURE_ENV+=		PHP_CONFIG=${PHP_CONFIG}
 
+.include "../../lang/php/phpversion.mk"
 .include "${PHPPKGSRCDIR}/buildlink3.mk"
 .include "../../textproc/xapian/module.mk"
 .include "../../mk/bsd.pkg.mk"
