--- a/sysutils/zabbix50-frontend/Makefile
+++ b/sysutils/zabbix50-frontend/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2025/01/23 20:46:17 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/08 03:54:13 taca Exp $
 
-PKGREVISION=	1
+PKGREVISION=	2
 
 PHP_VERSIONS_ACCEPTED=	74
 
@@ -19,32 +19,32 @@ EGDIR=		share/examples/${PKGBASE}
 USE_TOOLS+=		pax
 NO_BUILD=		yes
 
-REPLACE_SH+=	ui/locale/*.sh
+CHECK_PORTABILITY_SKIP=	configure
 
-.include "../../mk/bsd.prefs.mk"
+REPLACE_SH+=	ui/locale/add_new_language.sh ui/locale/make_mo.sh \
+		ui/locale/update_po.sh
+
 .include "options.mk"
 
 BUILD_DEFS+=		APACHE_GROUP APACHE_USER
 PKG_GROUPS_VARS+=	${APACHE_GROUP}
 PKG_USERS_VARS=		${APACHE_USER}
 
-DEPENDS+=	${PHP_PKG_PREFIX}-bcmath>=7.2.0:../../math/php-bcmath
-DEPENDS+=	${PHP_PKG_PREFIX}-gd>=7.2.0:../../graphics/php-gd
-DEPENDS+=	${PHP_PKG_PREFIX}-gettext>=7.2.0:../../devel/php-gettext
-DEPENDS+=	${PHP_PKG_PREFIX}-ldap>=7.2.0:../../databases/php-ldap
-DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=7.2.0:../../converters/php-mbstring
+DEPENDS+=	${PHP_PKG_PREFIX}-bcmath>=${PHP_BASE_VERS}:../../math/php-bcmath
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-gettext>=${PHP_BASE_VERS}:../../devel/php-gettext
+DEPENDS+=	${PHP_PKG_PREFIX}-ldap>=${PHP_BASE_VERS}:../../databases/php-ldap
+DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=${PHP_BASE_VERS}:../../converters/php-mbstring
 .if ${ZABBIX_DB_TYPE} == "mysql"
-DEPENDS+=	${PHP_PKG_PREFIX}-mysqli>=7.2.0:../../databases/php-mysqli
+DEPENDS+=	${PHP_PKG_PREFIX}-mysqli>=${PHP_BASE_VERS}:../../databases/php-mysqli
 .endif
 .if ${ZABBIX_DB_TYPE} == "pgsql"
-DEPENDS+=	${PHP_PKG_PREFIX}-pgsql>=7.2.0:../../databases/php-pgsql
+DEPENDS+=	${PHP_PKG_PREFIX}-pgsql>=${PHP_BASE_VERS}:../../databases/php-pgsql
 .endif
-DEPENDS+=	${PHP_PKG_PREFIX}-sockets>=7.2.0:../../net/php-sockets
-DEPENDS+=	${PHP_PKG_PREFIX}-sysvsem>=7.2.0:../../devel/php-sysvsem
+DEPENDS+=	${PHP_PKG_PREFIX}-sockets>=${PHP_BASE_VERS}:../../net/php-sockets
+DEPENDS+=	${PHP_PKG_PREFIX}-sysvsem>=${PHP_BASE_VERS}:../../devel/php-sysvsem
 
 INSTALLATION_DIRS+=	${EGDIR} share/zabbix
-
-do-configure:
 
 do-install:
 	rm -f ${WRKSRC}/ui/locale/*.orig
