--- a/time/pear-Date/Makefile
+++ b/time/pear-Date/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2015/08/30 15:00:52 taca Exp $
+# $NetBSD: Makefile,v 1.15 2025/02/08 03:56:22 taca Exp $
 
 DISTNAME=	Date-1.5.0a4
+PKGREVISION=	1
 CATEGORIES=	time
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
