--- a/www/drupal11/Makefile
+++ b/www/drupal11/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2025/02/03 00:01:37 taca Exp $
+# $NetBSD: Makefile,v 1.4 2025/02/08 04:00:53 taca Exp $
 
 DISTNAME=	drupal-11.1.0
+PKGREVISION=	1
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
 CATEGORIES=	www
 MASTER_SITES=	https://ftp-origin.drupal.org/files/projects/
@@ -10,11 +11,11 @@ HOMEPAGE=	http://drupal.org/
 COMMENT=	Open source content management system
 LICENSE=	gnu-gpl-v2
 
-DEPENDS+=	${PHP_PKG_PREFIX}-gd>=8.3.0:../../graphics/php-gd
-DEPENDS+=	${PHP_PKG_PREFIX}-opcache>=8.3.0:../../devel/php-opcache
-DEPENDS+=	${PHP_PKG_PREFIX}-pdo>=8.3.0:../../databases/php-pdo
-DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=8.3.0:../../converters/php-mbstring
-DEPENDS+=	${PHP_PKG_PREFIX}-zlib>=8.3.0:../../archivers/php-zlib
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-opcache>=${PHP_BASE_VERS}:../../devel/php-opcache
+DEPENDS+=	${PHP_PKG_PREFIX}-pdo>=${PHP_BASE_VERS}:../../databases/php-pdo
+DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=${PHP_BASE_VERS}:../../converters/php-mbstring
+DEPENDS+=	${PHP_PKG_PREFIX}-zlib>=${PHP_BASE_VERS}:../../archivers/php-zlib
 
 PHP_VERSIONS_ACCEPTED=	83 # 84
 
@@ -83,6 +84,6 @@ do-install:
 	cd ${WRKSRC} && ${PAX} -rw . ${DESTDIR}${PREFIX}/${DRUPAL}
 
 
-.include "../../lang/php/replace.mk"
+.include "../../lang/php/phpversion.mk"
 .include "../../lang/php/json.mk"
 .include "../../mk/bsd.pkg.mk"
