--- a/www/fengoffice/Makefile
+++ b/www/fengoffice/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.42 2024/02/19 15:43:36 taca Exp $
+# $NetBSD: Makefile,v 1.43 2025/02/08 04:00:53 taca Exp $
 #
 
 DISTNAME=	fengoffice-${FO_VERSION}
 PKGNAME=	${DISTNAME:S/_/-/:C/.rc$/rc1/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GITHUB:=fengoffice/}
 GITHUB_TYPE=	tag
@@ -17,11 +17,11 @@ LICENSE=	gnu-agpl-v3
 
 CONFLICTS+=	opengoo-[0-9]*
 
-DEPENDS+=	${PHP_PKG_PREFIX}-pdo_mysql>=7.1:../../databases/php-pdo_mysql
-DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=5.1.0:../../converters/php-mbstring
-DEPENDS+=	${PHP_PKG_PREFIX}-zip>=5.1.0:../../archivers/php-zip
-DEPENDS+=	${PHP_PKG_PREFIX}-gd>=5.1.0:../../graphics/php-gd
-DEPENDS+=	${PHP_PKG_PREFIX}-imap>=5.1.0:../../mail/php-imap
+DEPENDS+=	${PHP_PKG_PREFIX}-pdo_mysql>=${PHP_BASE_VERS}:../../databases/php-pdo_mysql
+DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=${PHP_BASE_VERS}:../../converters/php-mbstring
+DEPENDS+=	${PHP_PKG_PREFIX}-zip>=${PHP_BASE_VERS}:../../archivers/php-zip
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-imap>=${PHP_BASE_VERS}:../../mail/php-imap
 
 FO_VERSION=	3.8.5.8
 
