--- a/www/gallery2/Makefile
+++ b/www/gallery2/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.18 2020/03/20 11:58:34 nia Exp $
+# $NetBSD: Makefile,v 1.19 2025/02/08 04:00:53 taca Exp $
 #
 
 DISTNAME=		gallery-2.3.2-full
 PKGNAME=		gallery-2.3.2
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		www graphics
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=gallery/}
 
@@ -12,9 +12,9 @@ HOMEPAGE=		http://gallery.sourceforge.net/
 COMMENT=		Web-based photo gallery written in PHP
 LICENSE=		gnu-gpl-v2
 
-DEPENDS+=		${PHP_PKG_PREFIX}-gd>=5.0.4:../../graphics/php-gd
-DEPENDS+=		${PHP_PKG_PREFIX}-gettext>=5.0.4:../../devel/php-gettext
-DEPENDS+=		${PHP_PKG_PREFIX}-{mysql,pgsql}-[0-9]*:../../databases/php-mysql
+DEPENDS+=		${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=		${PHP_PKG_PREFIX}-gettext>=${PHP_BASE_VERS}:../../devel/php-gettext
+DEPENDS+=		${PHP_PKG_PREFIX}-{mysql,pgsql}>=${PHP_BASE_VERS}*:../../databases/php-mysql
 
 PHP_VERSIONS_ACCEPTED=	56
 
@@ -26,10 +26,7 @@ WRKSRC=			${WRKDIR}/gallery2
 
 REPLACE_PERL=		lib/tools/po/*.pl
 
-REPLACE_INTERPRETER+=	php
-REPLACE.php.old=	.*/bin/php
-REPLACE.php.new=	${PREFIX}/bin/php
-REPLACE_FILES.php=	lib/tools/po/extract.php
+REPLACE_PHP+=		lib/tools/po/extract.php
 
 PKG_SYSCONFSUBDIR=	gallery2
 
