--- a/www/matcha-sns/Makefile
+++ b/www/matcha-sns/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.7 2023/12/30 01:42:51 zafer Exp $
+# $NetBSD: Makefile,v 1.8 2025/02/08 04:00:54 taca Exp $
 #
 
 DISTNAME=	matcha-sns-1.3.7
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	https://ryo-on.users.sourceforge.net/distrib/
 EXTRACT_SUFX=	.zip
@@ -12,9 +13,9 @@ HOMEPAGE=	https://oss.icz.co.jp/sns/
 COMMENT=	Social Networking Service software that supports Timeline
 LICENSE=	gnu-gpl-v2 AND mit
 
-DEPENDS+=	${PHP_PKG_PREFIX}-gd>=5.2.0:../../graphics/php-gd
-DEPENDS+=	${PHP_PKG_PREFIX}-mysql>=5.2.0:../../databases/php-mysql
-DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=5.2.0:../../converters/php-mbstring
+DEPENDS+=	${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=	${PHP_PKG_PREFIX}-mysql>=${PHP_BASE_VERS}:../../databases/php-mysql
+DEPENDS+=	${PHP_PKG_PREFIX}-mbstring>=${PHP_BASE_VERS}:../../converters/php-mbstring
 
 PHP_VERSIONS_ACCEPTED=	56
 
