--- a/www/pear-HTML_Select/Makefile
+++ b/www/pear-HTML_Select/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2012/10/28 06:30:56 asau Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/08 04:04:39 taca Exp $
 
 DISTNAME=	HTML_Select-1.3.1
+PKGREVISION=	1
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
