--- a/www/php-phalcon4/Makefile
+++ b/www/php-phalcon4/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2023/06/06 12:42:48 riastradh Exp $
+# $NetBSD: Makefile,v 1.5 2025/02/08 04:07:18 taca Exp $
 #
 
 MODNAME=		phalcon
 PECL_VERSION=		4.1.0
+PKGREVISION=		1
 PKGNAME=		${PHP_PKG_PREFIX}-${DISTNAME}
 CATEGORIES=		www
 MASTER_SITES=		${MASTER_SITE_GITHUB:=phalcon/}
@@ -23,16 +24,16 @@ USE_LANGUAGES=		c c++
 USE_TOOLS+=		gmake pkg-config
 
 TOOL_DEPENDS+=		re2c>=0.15.3:../../devel/re2c
-DEPENDS+=		${PHP_PKG_PREFIX}-curl>=7.2.0:../../www/php-curl
-DEPENDS+=		${PHP_PKG_PREFIX}-gettext>=7.2.0:../../devel/php-gettext
-DEPENDS+=		${PHP_PKG_PREFIX}-json>=7.2.0:../../textproc/php-json
-DEPENDS+=		${PHP_PKG_PREFIX}-mbstring>=7.2.0:../../converters/php-mbstring
-DEPENDS+=		${PHP_PKG_PREFIX}-pdo>=7.2.0:../../databases/php-pdo
+DEPENDS+=		${PHP_PKG_PREFIX}-curl>=${PHP_BASE_VERS}:../../www/php-curl
+DEPENDS+=		${PHP_PKG_PREFIX}-gettext>=${PHP_BASE_VERS}:../../devel/php-gettext
+DEPENDS+=		${PHP_PKG_PREFIX}-json>=${PHP_BASE_VERS}:../../textproc/php-json
+DEPENDS+=		${PHP_PKG_PREFIX}-mbstring>=${PHP_BASE_VERS}:../../converters/php-mbstring
+DEPENDS+=		${PHP_PKG_PREFIX}-pdo>=${PHP_BASE_VERS}:../../databases/php-pdo
 DEPENDS+=		${PHP_PKG_PREFIX}-psr>=1.0.0:../../devel/php-psr
 
 .include "../../lang/php/phpversion.mk"
 
-PHPSETUPSUBDIR=		build/php${PKG_PHP_MAJOR_VERS}/${"${MACHINE_ARCH:Mx86_64}":?64:32}bits
+PHPSETUPSUBDIR=		build/php${PHP_MAJOR_VERS}/${"${MACHINE_ARCH:Mx86_64}":?64:32}bits
 MODULESDIR=		${WRKSRC}/${PHPSETUPSUBDIR}/modules
 CONFIGURE_DIRS+=	${PHPSETUPSUBDIR}
 
