--- a/www/php-phrasea2/Makefile
+++ b/www/php-phrasea2/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.16 2021/06/23 20:33:18 nia Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/08 04:07:18 taca Exp $
 #
 
 .include "../../www/phraseanet/Makefile.common"
 
 MODNAME=			phrasea2
-PKGREVISION=			3
+PKGREVISION=			4
 PECL_VERSION=			${VERS}
 PECL_LEGACY_VERSION_SCHEME=	yes
 EXTRACT_ELEMENTS=		${DISTNAME}/bin/src/php_phrasea2
