--- a/www/php-propro2/Makefile
+++ b/www/php-propro2/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2023/06/06 12:42:49 riastradh Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/08 04:07:18 taca Exp $
 
 MODNAME=	propro
 PECL_VERSION=	2.1.0
+PKGREVISION=	1
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,14 +17,14 @@ PHP_VERSIONS_ACCEPTED=	74
 USE_LANGUAGES=	c c++
 USE_LIBTOOL=	yes
 
-INSTALLATION_DIRS+=	include/php/ext/propro
+INSTALLATION_DIRS+=	${PHP_INCDIR}/ext/propro
 PLIST_SRC+=		PLIST
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/php_propro.h \
-		${DESTDIR}${PREFIX}/include/php/ext/propro
+		${DESTDIR}${PREFIX}/${PHP_INCDIR}/ext/propro
 	${INSTALL_DATA} ${WRKSRC}/src/php_propro_api.h \
-		${DESTDIR}${PREFIX}/include/php/ext/propro
+		${DESTDIR}${PREFIX}/${PHP_INCDIR}/ext/propro
 
 .include "../../lang/php/ext.mk"
 .include "../../mk/bsd.pkg.mk"
