--- a/www/php-uploadprogress/Makefile
+++ b/www/php-uploadprogress/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.8 2021/12/13 14:46:09 taca Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/08 04:07:19 taca Exp $
 #
 
 MODNAME=	uploadprogress
 PECL_VERSION=	2.0.2
+PKGREVISION=	1
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
