--- a/www/wordpress/Makefile
+++ b/www/wordpress/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.111 2025/01/02 12:02:37 wen Exp $
+# $NetBSD: Makefile,v 1.112 2025/02/08 04:07:19 taca Exp $
 
 DISTNAME=		wordpress-${VERSION}
 PKGNAME=		${PHP_PKG_PREFIX}-${DISTNAME}
 VERSION=		6.7.1
+PKGREVISION=		1
 CATEGORIES=		www
 MASTER_SITES=		https://wordpress.org/
 EXTRACT_SUFX=		.zip
@@ -41,11 +42,11 @@ OWN_DIRS_PERMS+=	${WPHOME}/wp-content/uploads \
 
 INSTALLATION_DIRS+=	${DOCDIR} ${WPHOME} ${EGDIR}
 
-DEPENDS+=		${PHP_PKG_PREFIX}-mysqli>=5.6.20:../../databases/php-mysqli
-DEPENDS+=		${PHP_PKG_PREFIX}-gd>=5.6.20:../../graphics/php-gd
-DEPENDS+=		${PHP_PKG_PREFIX}-curl>=5.6.20:../../www/php-curl
-DEPENDS+=		${PHP_PKG_PREFIX}-zip>=5.6.20:../../archivers/php-zip
-DEPENDS+=		${PHP_PKG_PREFIX}-zlib>=5.6.20:../../archivers/php-zlib
+DEPENDS+=		${PHP_PKG_PREFIX}-mysqli>=${PHP_BASE_VERS}:../../databases/php-mysqli
+DEPENDS+=		${PHP_PKG_PREFIX}-gd>=${PHP_BASE_VERS}:../../graphics/php-gd
+DEPENDS+=		${PHP_PKG_PREFIX}-curl>=${PHP_BASE_VERS}:../../www/php-curl
+DEPENDS+=		${PHP_PKG_PREFIX}-zip>=${PHP_BASE_VERS}:../../archivers/php-zip
+DEPENDS+=		${PHP_PKG_PREFIX}-zlib>=${PHP_BASE_VERS}:../../archivers/php-zlib
 
 SUBST_CLASSES+=		conf
 SUBST_MESSAGE.conf=	Fixing pathnames in configuration file.
